--- a/draft.tex
+++ b/draft.tex
@@ -65,15 +65,16 @@ We introduce a two-sided signaling model followed by a repeated Prisoner's Dilem
 %The sentence above literally parrots the editor's words back to them. Too on the nose?
 
 %Attempting to add in the China-US case in a prominent way. The prose is more awkward than I would like still. - March 13, 2023 BG
-Three archetypal situations illustrate the significance and difficulty of efficient concession-making in dispute settlement.  The first is the case of disarmament, the second is the concession of strategically valuable territory, and the third is the export of advanced technology to a strategic rival. %In each case, efficient concessions are difficult to make because the item conceded may be used by the recipient to bolster their military capabilities, altering the balance of power in the ongoing conflict. Also true in each case, if dispute settlement is achieved, a public good is produced -- peace in the first two cases and innovation and growth in the civilian economy in the third case.  
+Two archetypal situations illustrate the significance and difficulty of efficient concession-making in dispute settlement.  The first is the concession of strategically valuable territory in a military dispute, and the second is the export of advanced technology to a strategic rival. %In each case, efficient concessions are difficult to make because the item conceded may be used by the recipient to bolster their military capabilities, altering the balance of power in the ongoing conflict. Also true in each case, if dispute settlement is achieved, a public good is produced -- peace in the first two cases and innovation and growth in the civilian economy in the third case.  
 
-Barbara Walter identified disarmament as the ``critical barrier to civil war settlement'' (1997). Particularly in conflicts between a rebel group and a central government, the best-achievable negotiated settlement often involves policy concessions by the government in exchange for disarmament and recognition of government authority by the rebels. Disarmament by rebels is an efficient concession if fully-operational weapons are turned over to the central government for its own use, while disarmament accompanied by decommissioning is inefficient because the value of the arms is destroyed. Disarming and turning over fully functional weapons is an incredibly difficult concession for rebels to make: once they turn over their arms, they lose future bargaining leverage and have no guarantee that their own weapons will not be used against them later. If the rebels can instead decommission those weapons, an important stumbling block to peace is removed.\footnote{Other stumbling blocks remain, including the fact that the government retains its weapons. Thus, credible commitment on the part of the government remains difficult, even if decommissioning occurs.} Peace may therefore be possible with inefficient concessions where it is impossible with efficient concessions.\footnote{Walter's approach is part of a much broader literature on the bargaining model of war that looks at concessions and asymmetric information, including  Fearon (1996), Powell (1996a and 1996b, 2006), Slantchev (2011) and Arena (2013).}
+%Barbara Walter identified disarmament as the ``critical barrier to civil war settlement'' (1997). Particularly in conflicts between a rebel group and a central government, the best-achievable negotiated settlement often involves policy concessions by the government in exchange for disarmament and recognition of government authority by the rebels. Disarmament by rebels is an efficient concession if fully-operational weapons are turned over to the central government for its own use, while disarmament accompanied by decommissioning is inefficient because the value of the arms is destroyed. Disarming and turning over fully functional weapons is an incredibly difficult concession for rebels to make: once they turn over their arms, they lose future bargaining leverage and have no guarantee that their own weapons will not be used against them later. If the rebels can instead decommission those weapons, an important stumbling block to peace is removed.\footnote{Other stumbling blocks remain, including the fact that the government retains its weapons. Thus, credible commitment on the part of the government remains difficult, even if decommissioning occurs.} Peace may therefore be possible with inefficient concessions where it is impossible with efficient concessions.\footnote{Walter's approach is part of a much broader literature on the bargaining model of war that looks at concessions and asymmetric information, including  Fearon (1996), Powell (1996a and 1996b, 2006), Slantchev (2011) and Arena (2013).}
 
-Control of strategically valuable territory can pose similar challenges in both civil and interstate wars. Even if transferring control of strategically valuable territory creates the best chance for peace, its transfer often involves a substantial risk that the territory will provide military advantage in a future conflict. Following the 1992 war between Armenia and Azerbaijan over the disputed region of Ngorno-Karabakh, Armenia retained control of a significant amount of Azeribaijani territory that neither the Armenian government nor the Karabakh government viewed to be part of its homeland. Azerbaijan, however, valued control of the territory greatly as the home of Azeri residents and wished to govern the territory. Thus, it might have been efficient in the mid-1990s for the Armenian/Karabahk side to cede control of that territory to Azerbaijan as part of a deal in which Azerbaijan recognized Karabakh's independence.  However, that territory was strategically valuable, including territory on both sides of the Lachin Corridor, which connects Ngorno-Karabakh and Armenia. Azerbaijani control of the territory surrounding the corridor would empower Azerbaijan to seize military advantage in the future and cut off land travel between Ngorno-Karabakh and Armenia.  The territory was not conceded and the conflict persisted in costly stalemate for almost twenty years until war broke out anew in 2020. 
+Control of strategically valuable territory is often contested in both civil and interstate wars. Even if transferring control of strategically valuable territory creates the best chance for peace, its transfer often involves a substantial risk that the territory will provide military advantage in a future conflict. Following the 1992 war between Armenia and Azerbaijan over the disputed region of Ngorno-Karabakh, Armenia retained control of a significant amount of Azeribaijani territory that neither the Armenian government nor the Karabakh government viewed to be part of its homeland. Azerbaijan, however, valued control of the territory greatly as the home of Azeri residents and wished to govern the territory. Thus, it might have been efficient in the mid-1990s for the Armenian/Karabakh side to cede control of that territory to Azerbaijan as part of a deal in which Azerbaijan recognized Karabakh's independence.  However, that territory was strategically valuable, including territory on both sides of the Lachin Corridor, which connects Ngorno-Karabakh and Armenia. Azerbaijani control of the territory surrounding the corridor would empower Azerbaijan to seize military advantage in the future and cut off land travel between Ngorno-Karabakh and Armenia.  The territory was not conceded and the conflict persisted in costly stalemate for almost twenty years until war broke out anew in 2020. 
 
-In our third archetypal example, under both the Trump and Biden administrations, the US has restricted the export of cutting-edge technology to China. China and the US are engaged in geo-strategic competition. Both countries could benefit from the more rapid innovation and growth that free trade in chips and other technology would enable, but there is risk that any technology exported will be used in the military sector to pursue advanced weapons, altering the military balance of power. As of 2023, trade in numerous advanced technologies is restricted, reducing the global pace of innovation and economic growth. 
+In our second archetypal example, under both the Trump and Biden administrations, the US has restricted the export of cutting-edge technology to China. China and the US are engaged in geo-strategic competition. Both countries could benefit from the more rapid innovation and growth that free trade in chips and other technology would enable, but there is risk that any technology exported will be used in the military sector to pursue advanced weapons, altering the military balance of power. As of 2023, trade in numerous advanced technologies is restricted, reducing the global pace of innovation and economic growth. 
 
-In all three of these archetypal examples, cooperative/peaceful outcomes are extremely challenging to reach. Walter (1997) observes empirically that, due to the difficulty of making efficient disarmament concessions, civil wars tend to end on the battlefield, rather than through negotiated settlement. Interstate wars over territory are similarly prone to violent, rather than negotiated, resolution (Hensel 1996), and the trajectory of competition and cooperation between the US and China remains highly uncertain. Can mediation offer a path to more settlement, peace, and prosperity in these challenging contexts? 
+In both of these archetypal examples, cooperative/peaceful outcomes are extremely challenging to reach. %Walter (1997) observes empirically that, due to the difficulty of making efficient disarmament concessions, civil wars tend to end on the battlefield, rather than through negotiated settlement. 
+Interstate wars over territory tend to end on the battlefield, rather than through negotiated settlement (Hensel 1996), and the trajectory of competition and cooperation between the US and China remains highly uncertain. Can mediation offer a path to more settlement, peace, and prosperity in these challenging contexts? 
 
 This paper provides an explanation for why efficient concessions are sometimes impossible to make. It also revises our understanding of why inefficient concessions can sometimes be beneficial and how mediators can both help increase the efficiency of concessions and make cooperation possible. Weapons, strategically valuable territory, and the sharing of advanced technology will not be conceded if the conceding side fears that these items may be used in future attacks against them. Countries are reluctant to make concessions that can be used against them in latter rounds of conflict or negotiation. One way to mitigate the risk of dangerous concessions is to destroy the future value of the concession---e.g. decommission weapons, attempt to reduce the strategic value of the territory being conceded, or only allow trade in less advanced technologies or technologies without military applications. Another option, and the one on which we focus in this paper, is third-party mediation. We use this model to demonstrate that a third-party mediator can facilitate negotiated settlement by increasing trust and enabling disputants to make more efficient concessions. The mediator does this by only requiring concessions of negotiating parties who are able to cooperate, thereby removing the risk that concessions might be used against the giver in the future.
 
@@ -918,9 +919,9 @@ and Strategic Militarization.'' \emph{Journal of Political Economy} 127, no. 1 (
  
 \item Van de Ven, Jeroen. `The economics of the gift.'' Unpublished manuscript, 2000.
 
-\item Walter, Barbara F. ``The Critical Barrier to Civil War Settlement.'' \emph{International Organization} 51, no. 3 (1997), 335-364.
+%\item Walter, Barbara F. ``The Critical Barrier to Civil War Settlement.'' \emph{International Organization} 51, no. 3 (1997), 335-364.
 
-\item Walter, Barbara F. \emph{Committing to Peace: The Successful Settlement of Civil Wars.} Princeton: Princeton University Press, 2002.
+%\item Walter, Barbara F. \emph{Committing to Peace: The Successful Settlement of Civil Wars.} Princeton: Princeton University Press, 2002.
 
 \item Waltz, Kenneth. \emph {Man, the State and War: A Theoretical Analysis.} New York: Columbia University Press, 2001. %ref cites page 159
 
